# Resurrection

./: .gitignore  BUGS  DEBUG.txt  GUI.txt  Makefile  Makefile.am  Makefile.in  README  THANKS  THEME.txt  TIPS  TODO  WINDOW.txt  aclocal.m4  autogen.sh.BAK  build.sh  clean  clean.sh  config.status  configure  configure.ac  libtool  make_cint.sh  versions.ag
apps/: Makefile  Makefile.am  Makefile.in  TODO
apps/Rcalc/: RCALC.txt  main.c
apps/Rl/: Makefile  Makefile.am  Makefile.in  Rl  main.c
apps/Rsaver/: Makefile  Makefile.am  Makefile.in  Rsaver  main.c
apps/Rterm/: Makefile  Makefile.am  Makefile.in  Rterm  main.c
apps/Rv/: Makefile  Makefile.am  Makefile.in  Rv  main.c
apps/Rwm/: Makefile  Makefile.am  Makefile.in  Rwm  main.c
aux/: substdirs.make
fonts/: Makefile  Makefile.am  Makefile.in
images/: Makefile  Makefile.am  Makefile.in
include/: Makefile  Makefile.am  Makefile.in
include/Resurrection/: Resurrection.h  autoconf.h  autoconf.h.in  binding.h  cc.h  debug.h  defs.h  global.h  image.h  launch.h  macros.h  memory.h  os.h  paths.h  paths.h.in  port.h  prof.h  protos.h  select.h  setup.h  stamp-h1  standard.h  struct.h  system.h  term.h  thread.h  typedef.h  wm.h
include/Resurrection/conf/: launch.h  term.h  wm.h
include/Resurrection/imlib2/: protos.h
lib/: Makefile  Makefile.am  Makefile.in
lib/Rcalc/: gui.pov
lib/Resurrection/: #event.c#  Makefile  Makefile.am  Makefile.cint  Makefile.in  app.c  app.lo  binding.c  build_cint.sh  debug.c  debug.lo  error.c  event.c  freetype.c  global.c  imlib2.c  imlib2.lo  io.c  io.lo  libResurrection.la  malloc.loT  object.c  saver.c  saver.lo  scale.c  scale.lo  signal.c  util.c  window.c  xshm.c
lib/Rl/: Makefile  Makefile.am  Makefile.in  init.c  libRl.la
lib/Rterm/: Makefile  Makefile.am  Makefile.in  char.c  char.c.BAK  char.lo  csi.c  csi.lo  draw.c  draw.lo  escape.c  escape.lo  eterm.c  eterm.lo  eventhandler.c  eventhandler.lo  exit.c  exit.lo  font.c  font.lo  freetype.c  freetype.lo  gc.c  gc.lo  i18n.c  i18n.lo  libRterm.la  menu.c  option.c  option.lo  pixmap.c  pixmap.lo  print.c  privatemode.c  privatemode.lo  pty.c  pty.lo  screen.c  screen.lo  scrollbar.c  (+22 more)
lib/Rterm/OLD/: action.c  app.c  arch.c  colormap.c  event.c  hash.c  image.c  imlib2.c  scale.c  signal.c
lib/Rv/: Makefile  Makefile.am  Makefile.in  alpha2mmxasm.h  alpha2mmxint.h  binding.c  file.c  global.c  global.lo  init.c  libRv.la  load.c  load.lo
lib/Rwm/: Makefile  Makefile.am  Makefile.cint  Makefile.in  binding.c  binding.lo  build_cint.sh  client.c  client.lo  clock.c  clock.lo  desktop.c  desktop.lo  event.c  extension.c  frame.c  frame.lo  global.c  gmon.out  init.c  libRwm.la  libRwm_cint.dl  menu.c  menu.lo  override.c  override.lo  pager.c  pager.lo  property.c  root.c  test.lo  util.c
lib/Rwm/bak/: binding.c  client.c  clock.c  desktop.c  frame.c  global.c  init.c  menu.c  pager.c  root.c  test.c  util.c
m4/: check.m4  gcc.m4  mmap.m4  sbrk.m4  template.m4  util.m4
sh/: autogen.sh  lsh.sh  tardist.sh
test/: Makefile  Makefile.am  Makefile.cint  Makefile.in  WM_BIND  build_cint.sh  fadein.c  foo.c  utf8.c  wintest  wintest.c
tmp/: utf8.h
