AUTOMAKE_OPTIONS = foreign

dist_backgroundimage_DATA = \
	background/Resurrection.jpg \
	background/background.jpg \
	background/cavefire.jpg \
	background/darkstone.png \
	background/plasmacircuit.png \
	background/plasmadiff.png \
	background/tile_caverock.jpg \
	background/redmetal.jpg \
	background/sun.jpg \
	background/sword.jpg \
	background/sword.png \
	background/wasteland.jpg \
	background/wasteland2.jpg

dist_miscimage_DATA = \
	misc/arrow_down.png \
	misc/arrow_up.png \
	misc/logo.jpg \
	misc/hbar_bronze.png \
	misc/hbar_gold.png \
	misc/hbar_silver.png \
	misc/japanese.png \
	misc/panel.png \
	misc/title.png \
	misc/title_active.png \
	misc/vbar_bronze.png \
	misc/vbar_gold.png \
	misc/vbar_silver.png

dist_wmimage_DATA = \
	wm/vbar.png \
	wm/hbar1.png \
	wm/hbar2.png \
	wm/apps.png \
	wm/audio.png \
	wm/bordergold_horiz.png \
	wm/bordergold_vert.png \
	wm/desk.png \
	wm/edit.png \
	wm/menu.png \
	wm/msn.png \
	wm/term.png \
	wm/hbar_bronze.png \
	wm/hbar_gold.png \
	wm/hbar_silver.png \
	wm/pager.png \
	wm/vbar_bronze.png \
	wm/vbar_gold.png \
	wm/vbar_silver.png \
	wm/web.png

dist_widgetimage_DATA = \
	widget/bskip.png \
	widget/fskip.png \
	widget/next.png \
	widget/prev.png \
	widget/tooltip.png \
	widget/tooltip2.png \
	widget/winh.png \
	widget/winselh.png \
	widget/winclickh.png \
	widget/winfocush.png \
	widget/winv.png \
	widget/winselv.png \
	widget/winclickv.png \
	widget/winfocusv.png \
	widget/win_norm_h_title.png \
	widget/win_norm_v.png \
	widget/win_over_h_title.png \
	widget/win_over_v.png \
	widget/win_focus_h_title.png \
	widget/win_focus_v.png \
	widget/win_click_h_title.png \
	widget/win_click_v.png \
	widget/win_norm_h_bottom.png \
	widget/win_over_h_bottom.png \
	widget/win_focus_h_bottom.png \
	widget/win_click_h_bottom.png \
	widget/btn_exec_terminal_normal.png \
	widget/btn_exec_terminal_hilited.png \
	widget/btn_exec_terminal_clicked.png \
	widget/btn_exec_edit_normal.png \
	widget/btn_exec_edit_hilited.png \
	widget/btn_exec_edit_clicked.png \
	widget/btn_exec_web_normal.png \
	widget/btn_exec_web_hilited.png \
	widget/btn_exec_web_clicked.png \
	widget/btn_exec_music_normal.png \
	widget/btn_exec_music_hilited.png \
	widget/btn_exec_music_clicked.png \
	widget/btn_exec_imageview_normal.png \
	widget/btn_exec_imageview_hilited.png \
	widget/btn_exec_imageview_clicked.png \
	widget/btn_exec_paint_normal.png \
	widget/btn_exec_paint_hilited.png \
	widget/btn_exec_paint_clicked.png \
	widget/btn_action_restart_normal.png \
	widget/btn_action_restart_hilited.png \
	widget/btn_action_restart_clicked.png \
	widget/btn_action_exit_normal.png \
	widget/btn_action_exit_hilited.png \
	widget/btn_action_exit_clicked.png \
	orige/hruler.png \
	orige/vruler.png \
        orige/menu.png \
	orige/menu_o.png \
	orige/menu_t.png \
	orige/q1.png \
        orige/q2.png \
        orige/icon_monitor_1.png \
        orige/icon_monitor_2.png \
        orige/icon_monitor_3.png \
        orige/icon_floppy_1.png \
        orige/icon_floppy_2.png \
        orige/icon_floppy_3.png \
        orige/icon_N_1.png \
        orige/icon_N_2.png \
        orige/icon_N_3.png \
        orige/icon_beethoven_1.png \
        orige/icon_beethoven_2.png \
        orige/icon_beethoven_3.png

dist_pulseimage_DATA = \
	pulse/editor_hover.xcf \
	pulse/editor_inactive.png \
	pulse/editor_inactive.xcf \
	pulse/editor_normal.png \
	pulse/editor_normal.xcf \
	pulse/graphics_hover.png \
	pulse/graphics_hover.xcf \
	pulse/graphics_inactive.png \
	pulse/graphics_inactive.xcf \
	pulse/graphics_normal.png \
	pulse/graphics_normal.xcf \
	pulse/im_hover.png \
	pulse/im_hover.xcf \
	pulse/im_inactive.png \
	pulse/im_inactive.xcf \
	pulse/im_normal.png \
	pulse/im_normal.xcf \
	pulse/mailbox_hover.xcf \
	pulse/mailbox_inactive.png \
	pulse/mailbox_inactive.xcf \
	pulse/mailbox_new_hover.png \
	pulse/mailbox_new_hover.xcf \
	pulse/mailbox_new_inactive.png \
	pulse/mailbox_new_inactive.xcf \
	pulse/mailbox_new_normal.png \
	pulse/mailbox_new_normal.xcf \
	pulse/mailbox_normal.png \
	pulse/mailbox_normal.xcf \
	pulse/terminal_hover.png \
	pulse/terminal_hover.xcf \
	pulse/terminal_inactive.png \
	pulse/terminal_inactive.xcf \
	pulse/terminal_normal.png \
	pulse/terminal_normal.xcf \
	pulse/web_hover.png \
	pulse/web_hover.xcf \
	pulse/web_inactive.png \
	pulse/web_inactive.xcf \
	pulse/web_normal.png \
	pulse/web_normal.xcf
