AUTOMAKE_OPTIONS = foreign subdir-objects

AM_CFLAGS = @R_CFLAGS@ @R_INCLUDES@

lib_LTLIBRARIES = libResurrection.la

libResurrection_la_SOURCES = \
	signal.c \
	io.c \
	global.c \
	object.c \
	app.c \
	event.c \
	error.c \
	binding.c \
	imlib2.c \
	window.c \
	scale.c \
	saver.c \
	util.c \
	debug.c

#libResurrection_la_LIBADD = ../zmalloc/libzmalloc.la

